# minimalkv

./: .copier-answers.yml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  LICENSE  README.md  README.rst  boto_credentials.ini  check_store_creation.sh  docker-compose.yml  environment.yml  google_cloud_credentials.ini  pixi.toml  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  codeql.yml  pre-commit-autoupdate.yml  scorecards.yml  update-lockfiles.yml
docs/: azure.rst  boto.rst  cache.rst  changes.rst  conf.py  crypt.rst  db.rst  decorators.rst  development.rst  filesystem.rst  gae.rst  gcstorage.rst  git.rst  idgen.rst  index.rst  memory.rst  s3fsstore.rst
minimalkv/: __init__.py  _boto.py  _compat.py  _constants.py  _get_store.py  _hstores.py  _key_value_store.py  _mixins.py  _old_store_creation.py  _old_urls.py  _store_creation.py  _store_decoration.py  _typing.py  _url_utils.py  _urls.py  _version.py  access.py  cache.py  constants.py  crypt.py  decorator.py  fs.py  fsspecstore.py  git.py  idgen.py  key_value_store.py  mixins.py  url_utils.py
minimalkv/contrib/: __init__.py
minimalkv/db/: mongo.py  sql.py
minimalkv/memory/: __init__.py  redisstore.py
minimalkv/net/: _aws_refreshable_session.py  _azurestore_common.py  _azurestore_new.py  _azurestore_old.py  _net_common.py  azurestore.py  boto3store.py  botostore.py  gcstore.py  s3fsstore.py
minimalkv/storefact/: _store_creation.py
minimalkv/stores/: __init__.py  _file_system_store.py  _fsspec_store.py  _git_commit_store.py  _net_common.py
minimalkv/stores/_db/: __init__.py  _mongo_store.py
minimalkv/stores/_memory/: __init__.py  _dict_store.py  _redis_store.py
minimalkv/stores/_net/: __init__.py  _boto3_store.py  _google_cloud_store.py
minimalkv/stores/_net/_azure_block_blob_store/: _azurestore_new.py  _azurestore_old.py
terraform/: main.tf
tests/: basic_store.py  bucket_manager.py  conftest.py  idgens.py  test_azure_store.py  test_boto3_store.py  test_boto_store.py  test_bucket_manager.py  test_cache.py  test_deprecated_imports.py  test_dict_store.py  test_filesystem_store.py  test_gcloud_store.py  test_get_store_from_url.py  test_git_store.py  test_hmac.py  test_import.py  test_keyvaluestore_base.py  test_mongo.py  test_prefix_decorator.py  test_readonly_decorator.py  test_redis.py  test_s3fs.py  test_s3fs_aws.py  test_s3fs_minio.py  test_s3fsstore_url_credentials.py  test_sqlalchemy.py  test_url_encode_keys_decorator.py  url_store.py
tests/minio-container/: Dockerfile
tests/minio-container/policies/: policy1.json  policy2.json
tests/minio-container/scripts/: startup.sh
tests/store_creation/: test_creation_boto3store.py  test_creation_from_params.py  test_creation_from_url.py  test_creation_gcstore.py
tests/storefact/: test_gcstore_creation.py  test_store_creation.py  test_store_from_url.py  test_urls.py
