[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "minimalkv"
dynamic = ["version"]
license = { file = "LICENSE" }
description = "A key-value storage for binary data, support many backends."
readme = "README.rst"
authors = [{name = "Data Engineering Collective", email = "minimalkv@uwekorn.com"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]
dependencies = ["uritools"]
requires-python = ">=3.8"

[project.urls]
repository = "https://github.com/data-engineering-collective/minimalkv"

[tool.setuptools.packages.find]
include = ["minimalkv"]

[tool.setuptools.package-data]
minimalkv = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "C901", "D104", "D100"]
select = ["B", "C", "E", "F", "W", "B9", "D", "I"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
known-first-party = ["minimalkv"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D101", "D102", "D103", "E402"]
"tests/test_azure_store.py" = ["B018"]
"tests/storefact/test_urls.py" = ["C408"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
